--- a/validator/templates/auth/signup.html
+++ b/validator/templates/auth/signup.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    <form class="form-signin" method="post">
+    <form class="user-form" method="post">
         {% csrf_token %}
 
         <h1 class="h3 mb-3 font-weight-normal">Sign up</h1>
