--- a/validator/templates/auth/signup_complete.html
+++ b/validator/templates/auth/signup_complete.html
@@ -1,7 +1,7 @@
 {% extends 'auth/login_base.html' %}
 
 {% block content %}
-<div class="form-signin">
+<div class="user-form">
     <h1 class="h3 mb-3 font-weight-normal">Thank you for signing up!</h1>
     <p>Thank you for signing up with the QA4SM Validation Service.
     You will be notified via email <strong>as soon as your account is activated</strong> by an admin.</p>
