--- a/validator/static/css/scheme.css
+++ b/validator/static/css/scheme.css
@@ -1,3 +1,36 @@
+.user-form {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.user-form .checkbox {
+  font-weight: 400;
+}
+.user-form .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.user-form .form-control:focus {
+  z-index: 2;
+}
+.user-form-user {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.user-form-password {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.alert.small-padding {
+    padding: .2rem;
+}
+
 .custom-invalid-feedback {
     display: none;
     width: 100%;
