--- a/validator/templates/auth/password_reset_confirm.html
+++ b/validator/templates/auth/password_reset_confirm.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 {% if validlink %}
-    <form class="form-signin" method="post">
+    <form class="user-form" method="post">
         {% csrf_token %}
 
         <h1 class="h3 mb-3 font-weight-normal">Password reset</h1>
