--- a/validator/templates/auth/password_reset_form.html
+++ b/validator/templates/auth/password_reset_form.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<form class="form-signin" method="post">
+<form class="user-form" method="post">
     {% csrf_token %}
 
     <h1 class="h3 mb-3 font-weight-normal">Password reset</h1>
