--- a/validator/templates/user/profile_updated.html
+++ b/validator/templates/user/profile_updated.html
@@ -5,15 +5,11 @@
 <link href="{% static 'css/solid.min.css' %}" rel="stylesheet">
 <link href="{% static 'css/fontawesome.min.css' %}" rel="stylesheet">
 {% endblock %}
-{% block content %}
 
-<div class="container ">
-    <div class="card mb-1 border-0">
-        <div class="card-body center-text">
-            <h1 class="h3 font-weight-normal">User profile updated</h1>
-            <a class="btn btn-lg btn-primary btn-block"
-                href="{% url 'user_profile' %}" role="button">Back</a>
-        </div>
-    </div>
+{% block content %}
+<div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
+    <h1 class="jumbotron-heading">Profile updated</h1>
+    <p class="lead text-muted">Your user profile has been updated.</p>
+    <a class="btn btn-lg btn-primary" href="{% url 'user_profile' %}" role="button">Back</a>
 </div>
 {% endblock %}
