--- a/validator/templates/widgets/filter_checkbox_option.html
+++ b/validator/templates/widgets/filter_checkbox_option.html
@@ -1,4 +1,4 @@
-<div class="custom-control custom-checkbox">
+<div class="custom-control custom-switch">
     <input class="custom-control-input" id="{{ widget.attrs.id }}" value="{{ widget.value|stringformat:'s' }}" name="{{ widget.name }}" type="checkbox" {% include "django/forms/widgets/attrs.html" %}>
     <label class="custom-control-label" for="{{ widget.attrs.id }}">{{ widget.label }}</label>
     <span class="input-group-text fas fa-question-circle help-icon" title="{{ widget.help_text }}"></span>
