--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -180,22 +180,59 @@
                     <div class="card-deck">
                         <div class="card mb-4 shadow-sm">
                             <div class="card-header">
-                                <h4 class="my-0 font-weight-normal">Validation Options</h4>
+                                <h4 class="my-0 font-weight-normal">Anomalies</h4>
                                 <span class="input-group-text fas fa-question-circle help-icon"
-                                    title="Options to select different validation types."></span>
+                                    title="Optionally calculate metrics from anomalies instead of absolute values. For anomalies against climatology you have to specify the time period over which the climatology is computed."></span>
                             </div>
                             <div class="card-body">
 
                                 <div class="container">
-                                    <div class="row">
+                                    <div class="column">
 
-                                        <div class="custom-control custom-switch">
-                                            <input class="custom-control-input" id="{{val_form.anomalies.auto_id}}" name="{{val_form.anomalies.name}}"
-                                                {{ val_form.anomalies.initial|yesno:'checked,,' }} type="checkbox">
-                                            <label class="custom-control-label" for="{{val_form.anomalies.auto_id}}">Calculate anomalies</label>
+                                        <div class="row">
 
-                                            <span class="input-group-text fas fa-question-circle help-icon ml-2"
-                                                title="Calculate metrics from anomalies instead of absolute values."></span>
+                                            <div class="col-sm pl-0">
+                                                <div class="input-group" title="Anomalies calculation method: no anomalies, anomalies against 35 day moving average or anomalies against a climatology calculated from the given timespan.">
+                                                    <div class="input-group-prepend">
+                                                        <span class="input-group-text addon-w" id="scaling_addon2">Method</span>
+                                                    </div>
+                                                    {% render_field val_form.anomalies class="custom-select d-block" %}
+                                                </div>
+                                                {% for error in val_form.anomalies.errors %}
+                                                    <div class="custom-invalid-feedback">
+                                                        {{ error }}
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
+
+                                            <div class="col-sm anomalies-period"> <!-- style="visibility: hidden;" -->
+                                                <div class="input-group" title="Start of period to calculate climatology from.">
+                                                    <div class="input-group-prepend">
+                                                        <span class="input-group-text addon-w" id="scaling_addon2">From</span>
+                                                    </div>
+                                                    {% render_field val_form.anomalies_from class="custom-select d-block" %}
+                                                </div>
+                                                {% for error in val_form.anomalies_from.errors %}
+                                                    <div class="custom-invalid-feedback">
+                                                        {{ error }}
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
+
+                                            <div class="col-sm pr-0 anomalies-period"> <!--  style="visibility: hidden;" -->
+                                                <div class="input-group" title="End of period to calculate climatology from.">
+                                                    <div class="input-group-prepend">
+                                                        <span class="input-group-text addon-w" id="scaling_addon2">To</span>
+                                                    </div>
+                                                    {% render_field val_form.anomalies_to class="custom-select d-block" %}
+                                                </div>
+                                                {% for error in val_form.anomalies_to.errors %}
+                                                    <div class="custom-invalid-feedback">
+                                                        {{ error }}
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
+
                                         </div>
 
                                     </div>
@@ -366,6 +403,23 @@
             $("#{{ dc_form.dataset.auto_id }}").change(ajax_change_dataset).change(change_tab_name).change(); // last change() to call change on pageload
         {% endfor %}
         $("#{{ ref_dc_form.dataset.auto_id }}").change(ajax_change_dataset).change(); // last change() to call change on pageload
+    </script>
+
+    <script type="text/javascript">
+        function onChangeAnomalies() {
+            var anomMethod = $(this).val();
+            var dateBoxes = $('div.anomalies-period');
+            var dateSelectors = dateBoxes.find('select')
+
+            if(anomMethod == 'climatology') {
+                dateSelectors.prop('disabled', false);
+                dateBoxes.css('visibility', 'visible');
+            } else {
+                dateSelectors.prop('disabled', true);
+                dateBoxes.css('visibility', 'hidden');
+            }
+        }
+        $('#{{ val_form.anomalies.auto_id }}').change(onChangeAnomalies).change(); // last change() to call change on pageload
     </script>
 
     <script type="text/javascript">
