update the datasets page. Add ERA 5 and date range of all data sets

--- a/validator/templates/validator/datasets.html
+++ b/validator/templates/validator/datasets.html
@@ -15,9 +15,10 @@
 			<th scope="col" style="width: 7%">Dataset</th>
 			<th scope="col" style="width: 20%">Details</th>
 			<th scope="col" style="width: 20%">Versions supported</th>
+			<th scope="col" style="width: 10%">Time Range Covered</th>
 			<th scope="col" style="width: 13%">Data availability</th>
 			<th scope="col" style="width: 10%">Citation</th>
-			<th scope="col" style="width: 35%">Filters</th>
+			<th scope="col" style="width: 20%">Filters</th>
 		</tr>
         </thead>
         <tbody>
@@ -29,6 +30,7 @@
             </td>
 			<td>The QA4SM tool supports version v201706 and v201812 of the C3S product. Currently, the COMBINED product (combination
                 of active and passive sensors) is supported.</td>
+            <td>1978 - 2018 (both versions)</td>
 			<td>The data can be downloaded from the <a target="_blank" href="https://cds.climate.copernicus.eu/cdsapp#!/dataset/satellite-soil-moisture?tab=overview">Climate Data Store</a>.</td>
 			<td>TBA</td>
 			<td>
@@ -48,6 +50,7 @@
                 Observations are provided on a quarter degree grid. For more information on the ESA CCI SM product, please see
                 the <a target="_blank" href="https://www.esa-soilmoisture-cci.org/">product homepage</a>.</td>
 			<td>v04.4</td>
+			<td>1978 - 2018</td>
 			<td><a target="_blank" href="https://www.esa-soilmoisture-cci.org/node/145">Register at ESA CCI</a>, then download through FTP.</td>
 			<td>http://www.esa-soilmoisture-cci.org; <br/>
                 Liu, Y.Y., Dorigo, W.A., Parinussa, R.M., de Jeu, R.A.M. , Wagner, W., McCabe, M.F., Evans, J.P., van Dijk, A.I.J.M. (2012).
@@ -71,6 +74,7 @@
 			<td>The NASA SMAP level 3 data set provides global daily soil moisture observations at a 36 km resolution from
                 the SMAP sensor (<a target="_blank" href="https://nsidc.org/data/SPL3SMP">more information</a>).</td>
 			<td>The QA4SM tool supports version 5 of the SMAP L3 Soil moisture product.</td>
+			<td>2015 - 2018</td>
 			<td>The data can be downloaded from the product homepage <a target="_blank" href="https://nsidc.org/data/SPL3SMP">
                 here</a>.</td>
 			<td>Click <a target="_blank" href="https://nsidc.org/data/SPL3SMP">here</a></td>
@@ -87,6 +91,7 @@
                 global grid (DGG) with a spatial resolution of 25 km. Observations are provided from the ASCAT instrument on-board
                 both Metop-A and Metop-B (<a target="_blank" href="http://hsaf.meteoam.it/description-h25-h108-h111.php">more information</a>).</td>
             <td>The QA4SM tool supports version H113 of the H-SAF ASCAT SSM CDR product.</td>
+            <td>2007 - 2017</td>
             <td>The data can be downloaded from the <a target="_blank" href="http://hsaf.meteoam.it/description-h25-h108-h111.php">product homepage</a>.</td>
             <td>See section 5.2 of <a target="_blank" href="http://hsaf.meteoam.it/documents/PUM/SSM_ASCAT_DR_PUM_v0.6.pdf">this document</a></td>
             <td>
@@ -107,6 +112,7 @@
                 <a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0034425706004238">L-MEB model</a>.</td>
 
             <td>The QA4SM tool supports version 105 ascending.</td>
+            <td>2010 - 2018</td>
             <td>The data can be downloaded from the <a target="_blank" href="https://www.catds.fr/Products/Available-products-from-CEC-SM/SMOS-IC">product homepage</a>.</td>
             <td><a target="_blank" href="https://www.catds.fr/Products/Available-products-from-CEC-SM/SMOS-IC">See this page.</a></td>
             <td>
@@ -132,9 +138,10 @@
             <th scope="col" style="width: 7%">Dataset</th>
 			<th scope="col" style="width: 20%">Details</th>
 			<th scope="col" style="width: 20%">Versions supported</th>
+			<th scope="col" style="width: 10%">Time Range Covered</th>
 			<th scope="col" style="width: 13%">Data availability</th>
 			<th scope="col" style="width: 10%">Citation</th>
-			<th scope="col" style="width: 35%">Filters</th>
+			<th scope="col" style="width: 20%">Filters</th>
 		</tr>
         </thead>
         <tbody>
@@ -146,6 +153,7 @@
                 (<a target="_blank" href="https://ismn.geo.tuwien.ac.at/">more information</a>).</td>
 			<td>The ISMN data is downloaded periodically for use in the QA4SM portal, therefore the version number (and
                 data) will change over time. There are currently two versions available within QA4SM: v20180830 and v20190222.</td>
+			<td>Station dependent</td>
 			<td>Data is freely available after registration <a target="_blank" href="https://ismn.geo.tuwien.ac.at/data-access/">
                 here</a>.</td>
 			<td><a target="_blank" href="https://ismn.geo.tuwien.ac.at/terms-and-conditions/">Terms
@@ -164,12 +172,32 @@
                 versions are available for different time periods. For more information, visit the LDAS website:
                 <a target="_blank" href="https://ldas.gsfc.nasa.gov/gldas/">NASA Land Data Assimilation Systems Website</a></td>
 			<td>Version 2.1 is supported within the QA4SM tool. This dataset covers the period from the start of 2000 to the end of 2017.</td>
+			<td>2000-2017</td>
 			<td>Data is freely available after registration <a target="_blank" href="https://hydro1.gesdisc.eosdis.nasa.gov/data/GLDAS/GLDAS_NOAH025_3H.2.1/">
                 here for version 2.1</a> </td>
 			<td>Click <a target="_blank" href="https://ldas.gsfc.nasa.gov/gldas/GLDASpublications.php">here</a></td>
             <td>
                 <ul>
                 <li>Frozen soil or snow-cover: <br>Only use soil moisture data from grids cells where there is no snow cover or frozen soil.</li>
+                </ul>
+            </td>
+		</tr>
+		<tr>
+			<th scope="row">ERA5</th>
+			<td>ERA5 is a global reanalysis product provided by ECMWF. It provides global, sub-daily simulations of variables for land, 
+				atmosphere and ocean waves. The downloaded original 6-hourly (starting at 0:00 UTC) images of ERA5 Volumetric Soil Moisture 
+				with a spatial resolution of 0.25° Lat. * 0.25° Lon were converted into a time series format via daily averages. 
+				ERA5 covers the period from 1979 to 2-3 months before the present. The version number used in QA4SM indicates the date 
+				when the original data was downloaded.For more details about ERA5 please see 
+                <a target="_blank" href="https://confluence.ecmwf.int/display/CKB/ERA5+data+documentation">ECMWF Confluence - ERA5 Documentation</a></td>
+			<td>Version 20190613 is a full ERA5 reference dataset</td>
+			<td>1979 - 2018</td>
+			<td>Data is freely available with a CDS account. See <a target="_blank" href="https://confluence.ecmwf.int/display/CKB/ERA5+data+documentation#ERA5datadocumentation-HowtodownloadERA5">
+                ECMWF Confluence - ERA5 Download</a> </td>
+			<td>Click <a target="_blank" href="https://confluence.ecmwf.int/display/CKB/What+is+ERA5">here</a></td>
+            <td>
+                <ul>
+                <li>Frozen soil: <br>Only use soil moisture data from grids cells where there is no frozen soil.</li>
                 </ul>
             </td>
 		</tr>
