--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -285,6 +285,86 @@
                             </div>
                         </div>
                     </div>
+                    
+                    ddd
+                    <div class="card-deck">
+                        <div class="card mb-4 shadow-sm">
+                            <div class="card-header">
+                                <h4 class="my-0 font-weight-normal">Spatial subsetting</h4>
+                                <span class="input-group-text fas fa-question-circle help-icon"
+                                    title="Restricts the input and reference data to the bounding box given."></span>
+                            </div>
+                            <div class="card-body">
+
+                                <div class="container">
+                                    <div class="row">
+
+                                        <div class="col-sm pl-0">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text addon-w" id="scaling_addon1">Min. lat</span>
+                                                </div>
+                                                {% render_field val_form.min_lat class="custom-select d-block" %}
+                                            </div>
+                                            {% for error in val_form.min_lat.errors %}
+                                                <div class="custom-invalid-feedback">
+                                                    {{ error }}
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                        
+                                        <div class="col-sm pl-0">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text addon-w" id="scaling_addon1">Max. lat</span>
+                                                </div>
+                                                {% render_field val_form.max_lat class="custom-select d-block" %}
+                                            </div>
+                                            {% for error in val_form.max_lat.errors %}
+                                                <div class="custom-invalid-feedback">
+                                                    {{ error }}
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                        
+                                    </div>
+                                    
+                                    <div class="row">
+
+                                        <div class="col-sm pl-0">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text addon-w" id="scaling_addon1">Min. lon</span>
+                                                </div>
+                                                {% render_field val_form.min_lon class="custom-select d-block" %}
+                                            </div>
+                                            {% for error in val_form.min_lon.errors %}
+                                                <div class="custom-invalid-feedback">
+                                                    {{ error }}
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                        
+                                        <div class="col-sm pl-0">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text addon-w" id="scaling_addon1">Max. lon</span>
+                                                </div>
+                                                {% render_field val_form.max_lon class="custom-select d-block" %}
+                                            </div>
+                                            {% for error in val_form.max_lon.errors %}
+                                                <div class="custom-invalid-feedback">
+                                                    {{ error }}
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
 
                     <div class="card-deck">
 
