address review comments by WP

--- a/validator/templates/validator/datasets.html
+++ b/validator/templates/validator/datasets.html
@@ -32,7 +32,7 @@
                 of active and passive sensors) is supported.</td>
             <td>1978 - 2018 (both versions)</td>
 			<td>The data can be downloaded from the <a target="_blank" href="https://cds.climate.copernicus.eu/cdsapp#!/dataset/satellite-soil-moisture?tab=overview">Climate Data Store</a>.</td>
-			<td>TBA</td>
+			<td><a target="_blank" href="https://cds.climate.copernicus.eu/cdsapp#!/dataset/satellite-soil-moisture?tab=overview">See Climate Data Store</a></td>
 			<td>
                 <ul>
                     <li>Valid range:<br>Filter soil moisture values to ensure they are within the valid range (between 0 and 1 for the COMBINED product).</li>
@@ -187,10 +187,10 @@
 			<td>ERA5 is a global reanalysis product provided by ECMWF. It provides global, sub-daily simulations of variables for land, 
 				atmosphere and ocean waves. The downloaded original 6-hourly (starting at 0:00 UTC) images of ERA5 Volumetric Soil Moisture 
 				with a spatial resolution of 0.25° Lat. * 0.25° Lon were converted into a time series format via daily averages. 
-				ERA5 covers the period from 1979 to 2-3 months before the present. The version number used in QA4SM indicates the date 
-				when the original data was downloaded.For more details about ERA5 please see 
+				The ERA5 dataset starts in 1979. The version number used in QA4SM indicates the date 
+				when the original data was downloaded. For more details about ERA5 please see 
                 <a target="_blank" href="https://confluence.ecmwf.int/display/CKB/ERA5+data+documentation">ECMWF Confluence - ERA5 Documentation</a></td>
-			<td>Version 20190613 is a full ERA5 reference dataset</td>
+			<td>Version 20190613 is a snapshot of the reanalysis dataset from this point in time</td>
 			<td>1979 - 2018</td>
 			<td>Data is freely available with a CDS account. See <a target="_blank" href="https://confluence.ecmwf.int/display/CKB/ERA5+data+documentation#ERA5datadocumentation-HowtodownloadERA5">
                 ECMWF Confluence - ERA5 Download</a> </td>
